# Cgt

./: CMakeLists.txt  call_cmake_ubuntu.sh  readme.txt  tasks.txt
res/: fragment_shader.glsl  geometry_fragment_shader.glsl  geometry_terrain_vertex_shader.glsl  geometry_vertex_shader.glsl  terrain_fragment_shader.glsl  terrain_vertex_shader.glsl  vertex_shader.glsl
src/: BaseInterfaces.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  ComponentManager.hpp  Entity.cpp  Entity.h  Event.hpp  Geometry.cpp  Geometry.h  Input.cpp  Input.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Physics.cpp  Physics.h  Rotator.cpp  Rotator.h  SafeGl.cpp  SafeGl.h  SafeGl.hpp  SimpleMovement.cpp  SimpleMovement.h  SphereSpawner.cpp  SphereSpawner.h  Terrain.cpp  Terrain.h  TimedDestroy.cpp  TimedDestroy.h  Transformation.cpp  Transformation.h  Utility.cpp  Utility.h  (+5 more)
